# zxcvbn-client

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  zxcvbn-check.c
debian/: changelog  control  copyright  rules
